# sentinelqa

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  PRD.md  README.md  SECURITY.md  cliff.toml  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sentinel.config.yaml.example  tsconfig.base.json
.github/: CODEOWNERS  (+4 more)
apps/cli/: README.md  pyproject.toml
engine/: README.md  __init__.py  pyproject.toml
engine/analyzer/: __init__.py  categorize.py  llm_explainer.py  models.py  pipeline.py  repro.py  retry_decision.py  root_cause.py  signals.py
engine/analyzer/llm_prompts/: __init__.py  explainer.v1.md
engine/auth/: __init__.py  crypto.py  keyring_store.py  login.py  mfa_recorder.py  models.py  recorder.py  runtime.py  vault.py
engine/bench/: __init__.py  compare.py  report.py  runner.py
engine/cache/: __init__.py  fingerprint.py  run_info.py  store.py
engine/ci/: __init__.py  diff_aware.py  modes.py
engine/config/: __init__.py  loader.py  migration.py  schema.py  schema_check.py
engine/discovery/: __init__.py  api_detector.py  auth_boundary.py  crawler.py  dom_map.py  forms.py  graphql_ingest.py  openapi_ingest.py  pipeline.py  risk_map.py  risk_model.py  writer.py
engine/domain/: __init__.py  api_endpoint.py  attestation.py  base.py  discovery_graph.py  element.py  evidence.py  finding.py  flow.py  form.py  ids.py  jsonschema.py  module_result.py  policy_decision.py  project.py  quality_score.py  repair_suggestion.py  risk_map.py  route.py  schema.py  target.py  test_case.py  test_plan.py  test_run.py
engine/errors/: __init__.py  base.py  codes.py  render.py
engine/fingerprints/: __init__.py  corpus.py
engine/generator/: __init__.py  fixtures.py  locator_strategy.py  page_objects.py  pipeline.py  plan_md.py  render.py  writer.py
engine/healer/: __init__.py  banner.py  diff.py  fixture_repair.py  gating.py  locator_repair.py  models.py  patch_builder.py  pipeline.py  wait_repair.py  writer.py
engine/llm/: __init__.py  budget.py  defaults.py  protocol.py  rate_limit.py  redaction.py  registry.py  vision.py  vision_anthropic.py
engine/log/: __init__.py  audit.py  context.py  formatters.py  redaction_filter.py
engine/modules/: __init__.py  base.py
engine/orchestrator/: __init__.py  artifacts.py  changed_modules.py  registry.py  retention.py  run_lifecycle.py  symlinks.py  ts_bridge.py
engine/persistence/: __init__.py  flake_db.py
engine/planner/: __init__.py  core.py  flows.py  llm_adapter.py  plan_writer.py
engine/plugins/: __init__.py  errors.py  manifest.py  registry.py  runtime.py  sandbox.py  sandbox_worker.py  versioning.py
engine/policy/: __init__.py  audit_log.py  compliance.py  exit_codes.py  forbidden_features.py  proof_of_authorization.py  redaction.py  safety.py
engine/recording/: __init__.py  postconditions.py  spec_emitter.py  trace.py
engine/reporter/: __init__.py  a11y_heatmap.py  audit_view.py  deep_links.py  dispatcher.py  findings_linter.py  findings_writer.py  history.py  html_writer.py  junit_writer.py  markdown_writer.py  pr_comment.py  run_diff.py  run_writer.py  sarif_rules.py  sarif_writer.py  score_writer.py  slack.py  trends.py
engine/rum/: __init__.py  ingest.py  schema.py  server.py
engine/runner/: __init__.py  docker.py  forensics.py  local.py  quarantine.py  results.py  run_config.py  sharding.py
engine/runs/: __init__.py  ask.py  compare.py  coverage.py  replay.py  summary.py
engine/scoring/: __init__.py  blockers.py  decision.py  model.py  policy_gate.py
integrations/: README.md  __init__.py  _http.py  pyproject.toml
integrations/azure_devops/: azure-pipelines.sentinel.yml
integrations/bitbucket/: bitbucket-pipelines.sentinel.yml
integrations/browserstack/: README.md  __init__.py  runner.py
integrations/circleci/: orb.yml
integrations/discord/: __init__.py  poster.py
integrations/email/: __init__.py  digest.py
integrations/github/: README.md  __init__.py  action.yml  issue.py  issue_lifecycle.py  post_pr_comment.py  status.py
integrations/gitlab/: .gitlab-ci.sentinel.yml  README.md  __init__.py  post_mr_note.py  status.py
integrations/jenkins/: README.md
integrations/jira/: README.md  __init__.py  issue.py
integrations/linear/: README.md  __init__.py  issue.py
integrations/metrics/: __init__.py  builder.py  datadog.py  honeycomb.py  newrelic.py
integrations/otel/: __init__.py  tracer.py
integrations/pagerduty/: __init__.py  trigger.py
integrations/saucelabs/: README.md  __init__.py  runner.py
integrations/slack/: README.md  __init__.py  poster.py
integrations/teams/: __init__.py  poster.py
modules/: README.md  __init__.py  pyproject.toml
modules/accessibility/: __init__.py  axe_runner.py  findings.py  models.py  module.py  options.py  runner.py
modules/api/: __init__.py  backward_compat.py  cwe_mapping.py  findings.py  graphql.py  http_client.py  models.py  module.py  openapi.py  options.py
modules/chaos/: __init__.py  findings.py  ingestion.py  models.py  module.py  options.py  scenarios.py
modules/compliance/: __init__.py  ccpa.py  cookie_parity.py  findings.py  gdpr.py  inputs.py  models.py  module.py  options.py  soc2_trail.py  wcag22_check.py
modules/functional/: __init__.py  module.py  tags.py
modules/llm_audit/: __init__.py  findings.py  inputs.py  models.py  module.py  options.py  rules.py
modules/performance/: __init__.py  api_latency.py  bundle_cpu.py  findings.py  models.py  module.py  nav_stability.py  options.py  page_budget.py  runner.py
modules/security/: __init__.py  cwe_mapping.py  findings.py  http_client.py  models.py  module.py  options.py  rules.py  secret_patterns.py
modules/supply_chain/: __init__.py  container.py  findings.py  freshness.py  licenses.py  lockfiles.py  models.py  module.py  options.py  osv.py  postinstall.py  rules.py  sbom.py
modules/visual/: __init__.py  baselines.py  breakpoints.py  diff.py  findings.py  masking.py  models.py  module.py  options.py
(+1433 files in other folders)
