[project]
name = "sentinelqa-monorepo"
version = "0.0.0"
description = "SentinelQA monorepo root — Playwright-native release-confidence engine. See PRD.md and CLAUDE.md."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]

# This root project intentionally publishes nothing. It exists so uv has a workspace
# root and so dev tooling (ruff, mypy, pytest) has a single config surface.
# Real distributables live under packages/ and apps/.

[dependency-groups]
dev = [
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "coverage[toml]==7.6.7",
    "pydantic==2.10.3",
    "typer==0.15.1",
    "click==8.1.8",
    "pyyaml==6.0.2",
    "types-PyYAML==6.0.12.20240917",
    "pre-commit==4.0.1",
    "hypothesis==6.122.1",
    "check-jsonschema==0.30.0",
    "httpx==0.28.1",
    "jsonschema==4.23.0",
    "types-jsonschema==4.23.0.20241208",
    "lxml==5.3.0",
    "lxml-stubs==0.5.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "engine",
    "apps/cli",
    "packages/python-sdk",
]
# engine/* and modules/* sub-packages become workspace members as their code
# lands (Phase 01 onward). Each will ship its own pyproject.toml at that point.
# See docs/adr/0003-package-managers.md.

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "apps/cli/src",
    "packages/python-sdk/src",
    "engine",
    "modules",
    "tests",
]
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "node_modules",
    "playwright-report",
    "test-results",
    ".sentinel",
]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RUF", # ruff-specific
]
# We do not silence anything globally. Per-file ignores can be added with care.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests (rule not enabled but harmless)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy — strict by default
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
# Files list grows phase by phase as engine/* and modules/* sub-packages ship
# their first .py files (Phase 01 onward). Listing empty directories here makes
# mypy error with "no .py[i] files". See docs/adr/0003-package-managers.md.
files = [
    "apps/cli/src",
    "packages/python-sdk/src",
    "engine/domain",
    "engine/config",
    "engine/policy",
    "engine/errors",
    "engine/log",
    "engine/orchestrator",
    "engine/reporter",
    "tests",
]
exclude = [
    "(^|/)build/",
    "(^|/)dist/",
    "(^|/)\\.venv/",
]

# Tests stay typed (no `Any` leaks, no untyped defs) but we allow Pydantic-style
# coercion at the test boundary: Pydantic accepts `str` where `AnyUrl` is
# declared, `list[str]` where `frozenset[str]` is declared, etc. Disabling
# `arg-type` only on tests preserves strict checking everywhere else.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type", "type-arg", "no-untyped-def", "misc"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    # importlib mode avoids stdlib name collisions for sub-directories like
    # tests/unit/logging/ (otherwise pytest would try to import the test
    # module as `logging.test_*`, masking the stdlib).
    "--import-mode=importlib",
    # Slow tests (hypothesis property suites, performance benchmarks) opt out
    # of the default invocation; `make test-full` re-includes them.
    "-m",
    "not slow and not bench",
]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "slow: property-based or otherwise slow test (excluded from `make test`).",
    "bench: micro-benchmark; excluded from default test runs.",
]
# Domain entities are named `TestRun`, `TestCase`, and `TestExecutionError`
# (PRD §18). Pytest's default `python_classes = ["Test*"]` would otherwise
# try to collect them. We use only test *functions*, never test classes,
# so disable class collection entirely.
python_classes = ["_NoClassCollection_"]

# ---------------------------------------------------------------------------
# Coverage floor (per CLAUDE.md §17 and PRD §6.5). Phase 00 ships no production
# code, so coverage measurement is opt-in via `make coverage`. Phase 01 wires
# this floor into `make ci`. See docs/adr/0003-package-managers.md.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = [
    "engine/domain",
    "engine/config",
    "engine/policy",
    "engine/errors",
    "engine/log",
    "engine/orchestrator",
    "engine/reporter",
    "apps/cli/src/sentinel_cli",
]
# Phase 02 adds engine/orchestrator and apps/cli/src/sentinel_cli; both ship
# real code under the same 95% coverage floor.

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
