[project]
name = "sentinelqa-monorepo"
version = "0.0.0"
description = "SentinelQA monorepo root — Playwright-native release-confidence engine for LLM-built and human-built web apps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]

# This root project intentionally publishes nothing. It exists so uv has a workspace
# root and so dev tooling (ruff, mypy, pytest) has a single config surface.
# Real distributables live under packages/ and apps/.

[dependency-groups]
dev = [
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==7.1.0",
    "coverage[toml]==7.6.7",
    "pydantic==2.10.3",
    "typer==0.15.1",
    "click==8.1.8",
    "pyyaml==6.0.2",
    "types-PyYAML==6.0.12.20240917",
    "pre-commit==4.0.1",
    "hypothesis==6.122.1",
    "check-jsonschema==0.30.0",
    "httpx==0.28.1",
    "jsonschema==4.23.0",
    "types-jsonschema==4.23.0.20241208",
    "lxml==5.3.0",
    "lxml-stubs==0.5.1",
    "beautifulsoup4==4.12.3",
    "types-beautifulsoup4==4.12.0.20241020",
    "openapi-spec-validator==0.7.1",
    "graphql-core==3.2.5",
    "pytest-httpserver==1.1.0",
    "jinja2==3.1.4",
    "pillow==11.0.0",
    # : RS256 JWT signing for the Vertex AI provider. See
    # engine/pyproject.toml for the dependency rationale.
    "cryptography==45.0.1",
    # phase 37 (v1.7.0): mutation testing on critical paths.
    # Used by `make mutation`; not required for the standard test suite.
    "mutmut==2.4.4",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "engine",
    "modules",
    "integrations",
    "apps/cli",
    "packages/python-sdk",
    "packages/mcp-server",
]
# engine/* and modules/* sub-packages become workspace members as their code
# lands (onward). Each will ship its own pyproject.toml at that point.
# See docs/adr/0003-package-managers.md.

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "apps/cli/src",
    "packages/python-sdk/src",
    "packages/mcp-server/src",
    "engine",
    "modules",
    "tests",
]
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "node_modules",
    "playwright-report",
    "test-results",
    ".sentinel",
    # `examples/` ships reference apps (Next.js, FastAPI,
    # Django, Flask, React+Vite) whose framework idioms (e.g. Django's
    # class-level `dependencies = [...]`) deliberately diverge from the
    # SentinelQA core style. They are typed by their own toolchains.
    "examples",
]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "N", # pep8-naming
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RUF", # ruff-specific
]
# We do not silence anything globally. Per-file ignores can be added with care.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # asserts are fine in tests (rule not enabled but harmless)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy — strict by default
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
# Files list grows phase by phase as engine/* and modules/* sub-packages ship
# their first.py files (onward). Listing empty directories here makes
# mypy error with "no.py[i] files". See docs/adr/0003-package-managers.md.
files = [
    "apps/cli/src",
    "packages/python-sdk/src",
    "packages/mcp-server/src",
    "engine/domain",
    "engine/config",
    "engine/policy",
    "engine/errors",
    "engine/log",
    "engine/orchestrator",
    "engine/reporter",
    "engine/discovery",
    "engine/planner",
    "engine/generator",
    "engine/analyzer",
    "engine/auth",
    "engine/healer",
    "engine/llm",
    "engine/modules",
    "modules/api",
    "modules/compliance",
    "modules/functional",
    "modules/visual",
    "integrations",
    "tests",
]
exclude = [
    "(^|/)build/",
    "(^|/)dist/",
    "(^|/)\\.venv/",
]

# Tests stay typed (no `Any` leaks, no untyped defs) but we allow Pydantic-style
# coercion at the test boundary: Pydantic accepts `str` where `AnyUrl` is
# declared, `list[str]` where `frozenset[str]` is declared, etc. Disabling
# `arg-type` only on tests preserves strict checking everywhere else.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type", "type-arg", "no-untyped-def", "misc"]

# cryptography 45.x ships type stubs that use Python 3.12 PEP-695
# `type` parameter list syntax; mypy at python_version="3.11" trips
# on the stubs themselves. Silencing the third-party stub keeps our
# strict-mode invariant on first-party code intact.
[[tool.mypy.overrides]]
module = "cryptography.*"
follow_imports = "skip"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    # importlib mode avoids stdlib name collisions for sub-directories like
    # tests/unit/logging/ (otherwise pytest would try to import the test
    # module as `logging.test_*`, masking the stdlib).
    "--import-mode=importlib",
    # Slow tests (hypothesis property suites, performance benchmarks) opt out
    # of the default invocation; `make test-full` re-includes them.
    "-m",
    "not slow and not bench",
]
xfail_strict = true
filterwarnings = [
    "error",
    # bs4 + lxml 5.x emits this on every parser construction; it's their
    # internal lxml flag and we can't suppress it at the bs4 layer.
    "ignore:The 'strip_cdata' option of HTMLParser:DeprecationWarning",
    # httpx 0.28 prints a deprecation when cookies are passed per-request.
    # The crawler now sets cookies on the client, but third-party calls in
    # tests (httpx introspection requests) may still trip it.
    "ignore:Setting per-request cookies:DeprecationWarning",
    # The SDK wraps async methods around sync ones via asyncio.run, which
    # creates ephemeral event loops. On Linux their selector fds linger
    # until GC. Pytest's unraisableexception hook then catches them on a
    # later (unrelated) test's teardown. The leaks aren't product bugs —
    # they're the asyncio finaliser running late — so ignore the noise.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "slow: property-based or otherwise slow test (excluded from `make test`).",
    "bench: micro-benchmark; excluded from default test runs.",
]
# Domain entities are named `TestRun`, `TestCase`, and `TestExecutionError`.
# Pytest's default `python_classes = ["Test*"]` would otherwise try to
# collect them. We use only test *functions*, never test classes, so disable
# class collection entirely.
python_classes = ["_NoClassCollection_"]

# ---------------------------------------------------------------------------
# Coverage floor. Enforced by `make coverage` and wired into `make ci`.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = [
    "engine/domain",
    "engine/config",
    "engine/policy",
    "engine/errors",
    "engine/log",
    "engine/orchestrator",
    "engine/reporter",
    "engine/generator",
    "engine/runner",
    "engine/analyzer",
    "engine/auth",
    "engine/healer",
    "engine/llm",
    "engine/modules",
    "engine/ci",
    "engine/plugins",
    "modules/api",
    "modules/compliance",
    "modules/functional",
    "modules/supply_chain",
    "modules/visual",
    "apps/cli/src/sentinel_cli",
    "packages/python-sdk/src/sentinelqa",
    "packages/mcp-server/src/sentinelqa_mcp",
    "integrations",
]
# `engine/discovery` and `engine/planner` are intentionally NOT in the
# coverage source list: their public API surface is exercised
# end-to-end by integration tests, but their per-branch coverage floor
# is enforced separately in CI (each phase README pins its own per-
# package floor). Adding them to the global source list would force a
# uniform floor that doesn't match the differing risk profiles of
# discovery (network-bound) vs deterministic codegen.
# adds engine/orchestrator and apps/cli/src/sentinel_cli; both ship
# real code under the same 95% coverage floor.

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Mutation testing on the critical paths (v1.7.0, phase 37). Run with
# `make mutation`; results land in `.mutmut-cache/`. The list of paths is
# the same boundary the user pays for: scoring, policy, and the
# orchestrator's policy gate. Adding modules here is fine, but expect
# wall-clock to grow linearly.
[tool.mutmut]
paths_to_mutate = "engine/scoring/,engine/policy/safety.py,engine/policy/exit_codes.py,engine/scoring/policy_gate.py"
runner = "uv run pytest -x -q tests/unit/scoring tests/unit/policy tests/property/scoring -m 'not slow and not bench'"
backup = false
tests_dir = "tests"
