[project]
name = "sentinelqa-engine"
version = "0.0.0"
description = "SentinelQA engine — domain models, config loader, safety policy, errors, logging, orchestrator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]
keywords = [
    "sentinelqa",
    "playwright",
    "testing",
    "qa",
    "engine",
    "audit",
    "release-confidence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic==2.10.3",
    "pyyaml==6.0.2",
    "httpx==0.28.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "openapi-spec-validator==0.7.1",
    "graphql-core==3.2.5",
    "jinja2==3.1.4",
    "pillow==11.0.0",
    "packaging==26.2",
]

[project.urls]
Homepage = "https://github.com/Ohswedd/sentinelqa"
Documentation = "https://github.com/Ohswedd/sentinelqa/tree/main/docs"
Repository = "https://github.com/Ohswedd/sentinelqa"
Issues = "https://github.com/Ohswedd/sentinelqa/issues"
Changelog = "https://github.com/Ohswedd/sentinelqa/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# The engine source lives at engine/<subpkg>/ (NOT under a src/ layout). The
# engine/ directory IS the package: it contains __init__.py and the
# subpackages. For wheel builds, hatch ships engine/ itself; for editable
# installs, `dev-mode-dirs` tells hatch to add the parent directory to
# sys.path, which makes `import engine` find this directory directly.
[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["../engine"]
