[project]
name = "sentinelqa-cli"
version = "0.0.0"
description = "SentinelQA CLI (placeholder; real Typer app lands in Phase 02)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]
dependencies = []

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_cli"]
