[project]
name = "sentinelqa-cli"
version = "0.0.0"
description = "SentinelQA CLI — Typer entrypoint for the Playwright-native release-confidence engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]
dependencies = [
    "sentinelqa-engine",
    "sentinelqa",
    "sentinelqa-mcp",
    "typer==0.15.1",
    "click==8.1.8",
    "pydantic==2.10.3",
    "pyyaml==6.0.2",
    "httpx==0.28.1",
]

[tool.uv.sources]
sentinelqa-engine = { workspace = true }
sentinelqa = { workspace = true }
sentinelqa-mcp = { workspace = true }

[project.scripts]
sentinel = "sentinel_cli.main:_entry"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_cli"]
