[project]
name = "sentinelqa-reporter-example"
version = "0.1.0"
description = "Reference SentinelQA reporter plugin (CSV) (Phase 24 task 24.06)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ohswedd" }]
dependencies = [
    "sentinelqa",
    "sentinelqa-engine",
]

[project.entry-points."sentinelqa.plugins"]
csv-reporter = "sentinelqa_reporter_example.plugin:CsvReporter"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelqa_reporter_example"]
